--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,8 +14,8 @@
             {{#each burgers}}
             {{#unless this.devoured}}
 
-            <li class="list-of-burgers rounded">{{this.burger_name}} <button class="burger btn-primary rounded"
-                    data-id="{{this.id}}">Devour It!!</button></li>
+            <li class="list-of-burgers rounded">{{this.burger_name}} <button id="devourBtn" class="devourBtn btn-primary rounded"
+                    data-id="{{this.id}}">Devour</button></li>
 
 
             {{/unless}}
@@ -31,7 +31,9 @@
             {{#each burgers}}
             {{#if this.devoured}}
 
-            <li class="list-of-eaten-burgers">{{this.burger_name}}</li>
+            <li class="list-of-eaten-burgers">{{this.burger_name}}<button id="deleteBtn" class="deleteBtn btn-danger rounded"
+                    data-id="{{this.id}}">Delete</button></li>
+
 
             {{/if}}
             {{/each}}
@@ -45,10 +47,10 @@
     <form class="createBurger" id="burgerEntry">
 
         <div class="form-group">
-            <textarea class="rounded"  rows="3" cols="50" type="text" id="burgerName" name="name"></textarea>
+            <textarea class="rounded"  rows="2" cols="50" type="text" id="burgerName" name="name"></textarea>
             <hr>
             <button id="submit" class="btn-info rounded">Add Burger</button>
-            <p>Enter the name of the Burger you would like to eat...</p>
+            <p><strong>Enter the name of the Burger you would like to eat...</strong></p>
         </div>
         
 
