--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,6 @@
 
 
-<h1 class="jumbotron" id="title">Eat-Da-Burger <img
-        src="https://lh3.googleusercontent.com/proxy/Z0D4PJs-dpq5kKmexectgVu7qnfhFl_HR0c0RiBqVHDHEhbmK0TbzV5BI8jSItHEY499cqc_ayLi9UdnlTsYjZcT9g"
+<h1 class="jumbotron" id="title">Eat-Da-Burger <img id="burgerPic" src="/assets/images/burger.jpg"
         alt="Burger Pic" width="100px" height="100px"></h1>
 
 <div class="container">
